syntax = "proto3";

package api.rbac.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "student/api/rbac/v1;v1";

// RBAC服务定义
service RBACService {
  // 角色管理
  rpc GetRole(GetRoleRequest) returns (GetRoleResponse) {
    option (google.api.http) = {
      get: "/api/v1/roles/{id}"
    };
  }
  
  rpc CreateRole(CreateRoleRequest) returns (CreateRoleResponse) {
    option (google.api.http) = {
      post: "/api/v1/roles"
      body: "*"
    };
  }
  
  rpc UpdateRole(UpdateRoleRequest) returns (UpdateRoleResponse) {
    option (google.api.http) = {
      put: "/api/v1/roles/{id}"
      body: "*"
    };
  }
  
  rpc DeleteRole(DeleteRoleRequest) returns (DeleteRoleResponse) {
    option (google.api.http) = {
      delete: "/api/v1/roles/{id}"
    };
  }
  
  rpc ListRoles(ListRolesRequest) returns (ListRolesResponse) {
    option (google.api.http) = {
      get: "/api/v1/roles"
    };
  }

  // 权限管理
  rpc GetPermission(GetPermissionRequest) returns (GetPermissionResponse) {
    option (google.api.http) = {
      get: "/api/v1/permissions/{id}"
    };
  }
  
  rpc CreatePermission(CreatePermissionRequest) returns (CreatePermissionResponse) {
    option (google.api.http) = {
      post: "/api/v1/permissions"
      body: "*"
    };
  }
  
  rpc UpdatePermission(UpdatePermissionRequest) returns (UpdatePermissionResponse) {
    option (google.api.http) = {
      put: "/api/v1/permissions/{id}"
      body: "*"
    };
  }
  
  rpc DeletePermission(DeletePermissionRequest) returns (DeletePermissionResponse) {
    option (google.api.http) = {
      delete: "/api/v1/permissions/{id}"
    };
  }
  
  rpc ListPermissions(ListPermissionsRequest) returns (ListPermissionsResponse) {
    option (google.api.http) = {
      get: "/api/v1/permissions"
    };
  }

  // 用户角色管理
  rpc GetUserRoles(GetUserRolesRequest) returns (GetUserRolesResponse) {
    option (google.api.http) = {
      get: "/api/v1/users/{user_id}/roles"
    };
  }
  
  rpc AssignUserRole(AssignUserRoleRequest) returns (AssignUserRoleResponse) {
    option (google.api.http) = {
      post: "/api/v1/users/{user_id}/roles"
      body: "*"
    };
  }
  
  rpc RemoveUserRole(RemoveUserRoleRequest) returns (RemoveUserRoleResponse) {
    option (google.api.http) = {
      delete: "/api/v1/users/{user_id}/roles/{role_id}"
    };
  }

  // 角色权限管理
  rpc GetRolePermissions(GetRolePermissionsRequest) returns (GetRolePermissionsResponse) {
    option (google.api.http) = {
      get: "/api/v1/roles/{role_id}/permissions"
    };
  }
  
  rpc AssignRolePermission(AssignRolePermissionRequest) returns (AssignRolePermissionResponse) {
    option (google.api.http) = {
      post: "/api/v1/roles/{role_id}/permissions"
      body: "*"
    };
  }
  
  rpc RemoveRolePermission(RemoveRolePermissionRequest) returns (RemoveRolePermissionResponse) {
    option (google.api.http) = {
      delete: "/api/v1/roles/{role_id}/permissions/{permission_id}"
    };
  }

  // 权限检查
  rpc CheckPermission(CheckPermissionRequest) returns (CheckPermissionResponse) {
    option (google.api.http) = {
      post: "/api/v1/permissions/check"
      body: "*"
    };
  }
}

// 角色相关消息
message Role {
  uint32 id = 1;
  string name = 2;
  string description = 3;
  int32 status = 4;
  string created_at = 5;
  string updated_at = 6;
}

message GetRoleRequest {
  int32 id = 1;
}

message GetRoleResponse {
  Role role = 1;
}

message CreateRoleRequest {
  string name = 1;
  string description = 2;
  int32 status = 3;
}

message CreateRoleResponse {
  Role role = 1;
}

message UpdateRoleRequest {
  int32 id = 1;
  string name = 2;
  string description = 3;
  int32 status = 4;
}

message UpdateRoleResponse {
  Role role = 1;
}

message DeleteRoleRequest {
  int32 id = 1;
}

message DeleteRoleResponse {
  string message = 1;
}

message ListRolesRequest {
  int32 page = 1;
  int32 page_size = 2;
  string name = 3;
}

message ListRolesResponse {
  repeated Role roles = 1;
  int32 total = 2;
}

// 权限相关消息
message Permission {
  uint32 id = 1;
  string name = 2;
  string resource = 3;
  string action = 4;
  string description = 5;
  int32 status = 6;
  string created_at = 7;
  string updated_at = 8;
}

message GetPermissionRequest {
  int32 id = 1;
}

message GetPermissionResponse {
  Permission permission = 1;
}

message CreatePermissionRequest {
  string name = 1;
  string resource = 2;
  string action = 3;
  string description = 4;
  int32 status = 5;
}

message CreatePermissionResponse {
  Permission permission = 1;
}

message UpdatePermissionRequest {
  int32 id = 1;
  string name = 2;
  string resource = 3;
  string action = 4;
  string description = 5;
  int32 status = 6;
}

message UpdatePermissionResponse {
  Permission permission = 1;
}

message DeletePermissionRequest {
  int32 id = 1;
}

message DeletePermissionResponse {
  string message = 1;
}

message ListPermissionsRequest {
  int32 page = 1;
  int32 page_size = 2;
  string name = 3;
  string resource = 4;
}

message ListPermissionsResponse {
  repeated Permission permissions = 1;
  int32 total = 2;
}

// 用户角色相关消息
message UserRole {
  uint32 id = 1;
  uint32 user_id = 2;
  uint32 role_id = 3;
  string created_at = 4;
  string updated_at = 5;
  Role role = 6;
}

message GetUserRolesRequest {
  int32 user_id = 1;
}

message GetUserRolesResponse {
  repeated UserRole user_roles = 1;
}

message AssignUserRoleRequest {
  int32 user_id = 1;
  int32 role_id = 2;
}

message AssignUserRoleResponse {
  string message = 1;
}

message RemoveUserRoleRequest {
  int32 user_id = 1;
  int32 role_id = 2;
}

message RemoveUserRoleResponse {
  string message = 1;
}

// 角色权限相关消息
message RolePermission {
  uint32 id = 1;
  uint32 role_id = 2;
  uint32 permission_id = 3;
  string created_at = 4;
  string updated_at = 5;
  Permission permission = 6;
}

message GetRolePermissionsRequest {
  int32 role_id = 1;
}

message GetRolePermissionsResponse {
  repeated RolePermission role_permissions = 1;
}

message AssignRolePermissionRequest {
  int32 role_id = 1;
  int32 permission_id = 2;
}

message AssignRolePermissionResponse {
  string message = 1;
}

message RemoveRolePermissionRequest {
  int32 role_id = 1;
  int32 permission_id = 2;
}

message RemoveRolePermissionResponse {
  string message = 1;
}

// 权限检查相关消息
message CheckPermissionRequest {
  string user = 1;
  string resource = 2;
  string action = 3;
}

message CheckPermissionResponse {
  bool has_permission = 1;
} 