package service

import (
	"context"

	pb "student/api/rbac/v1"
	"student/internal/rbac-service/biz"

	"github.com/go-kratos/kratos/v2/log"
)

type RBACService struct {
	pb.UnimplementedRBACServiceServer

	uc  *biz.RBACUsecase
	log *log.Helper
}

func NewRBACService(uc *biz.RBACUsecase, logger log.Logger) *RBACService {
	return &RBACService{
		uc:  uc,
		log: log.NewHelper(logger),
	}
}

// GetRole 获取角色
func (s *RBACService) GetRole(ctx context.Context, req *pb.GetRoleRequest) (*pb.GetRoleResponse, error) {
	// 简化实现
	role := &pb.Role{
		Id:          1,
		Name:        "admin",
		Description: "管理员角色",
		Status:      1,
		CreatedAt:   "2025-01-01 00:00:00",
		UpdatedAt:   "2025-01-01 00:00:00",
	}
	return &pb.GetRoleResponse{
		Role: role,
	}, nil
}

// CreateRole 创建角色
func (s *RBACService) CreateRole(ctx context.Context, req *pb.CreateRoleRequest) (*pb.CreateRoleResponse, error) {
	// 简化实现
	role := &pb.Role{
		Id:          1,
		Name:        req.Name,
		Description: req.Description,
		Status:      req.Status,
		CreatedAt:   "2025-01-01 00:00:00",
		UpdatedAt:   "2025-01-01 00:00:00",
	}
	return &pb.CreateRoleResponse{
		Role: role,
	}, nil
}

// UpdateRole 更新角色
func (s *RBACService) UpdateRole(ctx context.Context, req *pb.UpdateRoleRequest) (*pb.UpdateRoleResponse, error) {
	// 简化实现
	role := &pb.Role{
		Id:          uint32(req.Id),
		Name:        req.Name,
		Description: req.Description,
		Status:      req.Status,
		CreatedAt:   "2025-01-01 00:00:00",
		UpdatedAt:   "2025-01-01 00:00:00",
	}
	return &pb.UpdateRoleResponse{
		Role: role,
	}, nil
}

// DeleteRole 删除角色
func (s *RBACService) DeleteRole(ctx context.Context, req *pb.DeleteRoleRequest) (*pb.DeleteRoleResponse, error) {
	// 简化实现
	return &pb.DeleteRoleResponse{
		Message: "删除角色成功",
	}, nil
}

// ListRoles 获取角色列表
func (s *RBACService) ListRoles(ctx context.Context, req *pb.ListRolesRequest) (*pb.ListRolesResponse, error) {
	// 简化实现
	roles := []*pb.Role{
		{
			Id:          1,
			Name:        "admin",
			Description: "管理员角色",
			Status:      1,
			CreatedAt:   "2025-01-01 00:00:00",
			UpdatedAt:   "2025-01-01 00:00:00",
		},
	}
	return &pb.ListRolesResponse{
		Roles: roles,
		Total: 1,
	}, nil
}

// GetPermission 获取权限
func (s *RBACService) GetPermission(ctx context.Context, req *pb.GetPermissionRequest) (*pb.GetPermissionResponse, error) {
	// 简化实现
	permission := &pb.Permission{
		Id:          1,
		Name:        "user:read",
		Resource:    "user",
		Action:      "read",
		Description: "读取用户权限",
		Status:      1,
		CreatedAt:   "2025-01-01 00:00:00",
		UpdatedAt:   "2025-01-01 00:00:00",
	}
	return &pb.GetPermissionResponse{
		Permission: permission,
	}, nil
}

// CreatePermission 创建权限
func (s *RBACService) CreatePermission(ctx context.Context, req *pb.CreatePermissionRequest) (*pb.CreatePermissionResponse, error) {
	// 简化实现
	permission := &pb.Permission{
		Id:          1,
		Name:        req.Name,
		Resource:    req.Resource,
		Action:      req.Action,
		Description: req.Description,
		Status:      req.Status,
		CreatedAt:   "2025-01-01 00:00:00",
		UpdatedAt:   "2025-01-01 00:00:00",
	}
	return &pb.CreatePermissionResponse{
		Permission: permission,
	}, nil
}

// UpdatePermission 更新权限
func (s *RBACService) UpdatePermission(ctx context.Context, req *pb.UpdatePermissionRequest) (*pb.UpdatePermissionResponse, error) {
	// 简化实现
	permission := &pb.Permission{
		Id:          uint32(req.Id),
		Name:        req.Name,
		Resource:    req.Resource,
		Action:      req.Action,
		Description: req.Description,
		Status:      req.Status,
		CreatedAt:   "2025-01-01 00:00:00",
		UpdatedAt:   "2025-01-01 00:00:00",
	}
	return &pb.UpdatePermissionResponse{
		Permission: permission,
	}, nil
}

// DeletePermission 删除权限
func (s *RBACService) DeletePermission(ctx context.Context, req *pb.DeletePermissionRequest) (*pb.DeletePermissionResponse, error) {
	// 简化实现
	return &pb.DeletePermissionResponse{
		Message: "删除权限成功",
	}, nil
}

// ListPermissions 获取权限列表
func (s *RBACService) ListPermissions(ctx context.Context, req *pb.ListPermissionsRequest) (*pb.ListPermissionsResponse, error) {
	// 简化实现
	permissions := []*pb.Permission{
		{
			Id:          1,
			Name:        "user:read",
			Resource:    "user",
			Action:      "read",
			Description: "读取用户权限",
			Status:      1,
			CreatedAt:   "2025-01-01 00:00:00",
			UpdatedAt:   "2025-01-01 00:00:00",
		},
	}
	return &pb.ListPermissionsResponse{
		Permissions: permissions,
		Total:       1,
	}, nil
}

// CheckPermission 检查权限
func (s *RBACService) CheckPermission(ctx context.Context, req *pb.CheckPermissionRequest) (*pb.CheckPermissionResponse, error) {
	// 简化实现 - 始终允许
	return &pb.CheckPermissionResponse{
		HasPermission: true,
	}, nil
}

// GetUserRoles 获取用户角色
func (s *RBACService) GetUserRoles(ctx context.Context, req *pb.GetUserRolesRequest) (*pb.GetUserRolesResponse, error) {
	// 简化实现
	role := &pb.Role{
		Id:          1,
		Name:        "admin",
		Description: "管理员角色",
		Status:      1,
		CreatedAt:   "2025-01-01 00:00:00",
		UpdatedAt:   "2025-01-01 00:00:00",
	}
	userRoles := []*pb.UserRole{
		{
			Id:        1,
			UserId:    uint32(req.UserId),
			RoleId:    1,
			CreatedAt: "2025-01-01 00:00:00",
			UpdatedAt: "2025-01-01 00:00:00",
			Role:      role,
		},
	}
	return &pb.GetUserRolesResponse{
		UserRoles: userRoles,
	}, nil
}

// AssignUserRole 分配用户角色
func (s *RBACService) AssignUserRole(ctx context.Context, req *pb.AssignUserRoleRequest) (*pb.AssignUserRoleResponse, error) {
	// 简化实现
	return &pb.AssignUserRoleResponse{
		Message: "分配角色成功",
	}, nil
}

// RemoveUserRole 移除用户角色
func (s *RBACService) RemoveUserRole(ctx context.Context, req *pb.RemoveUserRoleRequest) (*pb.RemoveUserRoleResponse, error) {
	// 简化实现
	return &pb.RemoveUserRoleResponse{
		Message: "移除角色成功",
	}, nil
}

// GetRolePermissions 获取角色权限
func (s *RBACService) GetRolePermissions(ctx context.Context, req *pb.GetRolePermissionsRequest) (*pb.GetRolePermissionsResponse, error) {
	// 简化实现
	permission := &pb.Permission{
		Id:          1,
		Name:        "user:read",
		Resource:    "user",
		Action:      "read",
		Description: "读取用户权限",
		Status:      1,
		CreatedAt:   "2025-01-01 00:00:00",
		UpdatedAt:   "2025-01-01 00:00:00",
	}
	rolePermissions := []*pb.RolePermission{
		{
			Id:           1,
			RoleId:       uint32(req.RoleId),
			PermissionId: 1,
			CreatedAt:    "2025-01-01 00:00:00",
			UpdatedAt:    "2025-01-01 00:00:00",
			Permission:   permission,
		},
	}
	return &pb.GetRolePermissionsResponse{
		RolePermissions: rolePermissions,
	}, nil
}

// AssignRolePermission 分配角色权限
func (s *RBACService) AssignRolePermission(ctx context.Context, req *pb.AssignRolePermissionRequest) (*pb.AssignRolePermissionResponse, error) {
	// 简化实现
	return &pb.AssignRolePermissionResponse{
		Message: "分配权限成功",
	}, nil
}

// RemoveRolePermission 移除角色权限
func (s *RBACService) RemoveRolePermission(ctx context.Context, req *pb.RemoveRolePermissionRequest) (*pb.RemoveRolePermissionResponse, error) {
	// 简化实现
	return &pb.RemoveRolePermissionResponse{
		Message: "移除权限成功",
	}, nil
}
